# pygestalt

./: LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
gestalt/: __init__.py  patch.py  sampler.py  utils.py
notebooks/: Bezier_Curves.ipynb  Demo_Sampler.ipynb  From_Image.ipynb  Stimuli.ipynb
pygestalt/: patch.py  sampler.py  utils.py
tests/: __init__.py
