[tool.poetry]
name = "gestalt"
version = "0.1.1"
description = "A Python package for visual stimuli generation and detection."
authors = ["Han Wang <han.wang.fr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.11.4"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
# pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
