[tool.poetry]
name = "pygestalt"
version = "0.1.5"
description = "A Python package for visual stimuli generation and detection."
authors = ["Han Wang <han.wang.fr@gmail.com>"]
readme = "README.md"
# packages = [
#     { include = "pygestalt" },
#     ]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.13.0"
numpy = "^1.26.2"
matplotlib = "^3.8.4"
# pygame = "^2.5.2"
scikit-image = "^0.23.2"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
